--- a/projects/hola-mundo/src/App.css
+++ b/projects/hola-mundo/src/App.css
@@ -4,7 +4,7 @@
     color: #fff;
     font-size: .8rem;
     justify-content: space-between;
-}
+    }
 
 .tw-followCard-header {
     display: flex;
@@ -28,9 +28,28 @@
 }
 
 .tw-followCard-buttom {
+    cursor: pointer;
     margin-left: 16px;
     border: 0;
     border-radius: 999px;
     padding: 6px 16px;
     font-weight: bold;
+    transition: all 0.4s ease, color 0.4s ease;
+}
+
+.tw-followCard-buttom:hover{
+    background-color: #333;
+    color: #fff;
+
+}
+
+.is-following {
+    background-color: #333;
+    color: #fff;
+    border: #fff 1px solid;
+}
+.is-following:hover {
+    background-color: rgba(125, 26, 9, 0.4);
+    color: #dd0d0d;
+    border: none;
 }
