--- a/projects/react-prueba-tecnica/src/App.css
+++ b/projects/react-prueba-tecnica/src/App.css
@@ -5,6 +5,7 @@ main {
   justify-content: center;
   max-width: 800px;
   margin: 0 auto;
+  gap: 20px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
